mobile large_data view fixed

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.17.11/dist/css/uikit.min.css" />
     <title>유니온 랭킹 검색기</title>
 </head>
-<body>
-    <div class="wrap uk-background-primary">
+<body class="uk-background-primary">
+    <div class="wrap ">
         <div class="title">
             유니온 랭킹 검색기
         </div>
